--- a/gb/24/8/10/n14308673.md
+++ b/gb/24/8/10/n14308673.md
@@ -138,7 +138,7 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307761.md#1">奥运台湾代表团拜会巴黎勒瓦卢瓦市府</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307802.md#1">奥运冲浪比赛有“鲸喜” 鲸鱼跃出海面抢镜</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/31/n11758706.md#1" target="_blank">张林：共军在朝鲜战争中丧生两百万（1）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/18/n2968768.md#1" target="_blank">一竹：不要再给自己的生命留下遗憾</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/10/n11248062.md#1" target="_blank">共产暴政录：共产革命前后的古巴华人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
